platform/policy/kyverno/tests/pdb-avoid-blocking-disruptions/invalid-pdb.yml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: pdb-disruptions-invalid
  namespace: kyverno-pdb-disruptions
spec:
  maxUnavailable: 0
  selector:
    matchLabels:
      app: pdb-test
