platform/policy/kyverno/tests/pdb-avoid-blocking-disruptions/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-pdb-disruptions
  labels:
    infra.k8/tier: staging
